fix: multiline title using table, visibility toggle
Model comparaison page now uses a table to display datasets available on
the page. A visibility toggle is available to show/hide each dataset.

--- a/src/styles/widgets/TrainingMonitor/styles.scss
+++ b/src/styles/widgets/TrainingMonitor/styles.scss
@@ -1,5 +1,20 @@
 @import "../../palettes/palette-1.scss";
 
+.trainingmonitor-layout {
+  width: 100%;
+  margin: 0 0 10px 5px;
+
+  i {
+    cursor: pointer;
+    margin: 3px;
+    color: $neutral_blue_8;
+  }
+
+  i.selected-layout {
+    color: $neutral_blue_2;
+  }
+}
+
 .trainingmonitor-chart {
   .chart {
     border: 1px solid $neutral_blue_9;
@@ -20,6 +35,7 @@
         margin: 0;
         font-size: 22px;
         font-weight: 700;
+        width: 100%;
 
         i {
           margin-right: 5px;
@@ -103,5 +119,52 @@
         left: -2px;
       }
     }
+  }
+}
+
+table.trainingmonitor-multititle {
+  border-spacing: 0 4px;
+  color: #e2e2e2;
+  padding: 10px;
+  width: 100%;
+
+  th,
+  td {
+    padding: 15px;
+    text-align: left;
+  }
+
+  tbody tr {
+    background-color: #1c223b;
+    color: #e2e2e2;
+  }
+
+  tbody tr:hover {
+    background-color: #151b31;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+  }
+
+  tbody tr td:first-of-type {
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+  }
+
+  tbody tr td:last-of-type {
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    text-align: center;
+
+    i {
+      cursor: pointer;
+    }
+  }
+
+  tbody td:first-of-type {
+    border-left-width: 10px;
+    border-left-style: solid;
+  }
+
+  tbody tr:hover .delete {
+    opacity: 1;
   }
 }
